--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.22.0",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
